--- a/Galois_spr22/HW06.tex
+++ b/Galois_spr22/HW06.tex
@@ -43,6 +43,29 @@ Exercise 9.4.3\\
     \end{align}
     so we could assume $a=1$ from the beginning.\\
     Also, $L$ is the same if we shift by a rational amount $b/3$ of all the roots of this polynomial, because
+    \begin{align}
+        X^3 + b X^2 + cX+d=(X + \frac{ b }{ 3 })^3 + (c - \frac{ b^2 }{ 3 })(X + \frac{ b }{ 3 }) + d + \frac{ b^3 }{ 9 } - \frac{ cb }{ 3 } - \frac{ b^3 }{ 27 }
+    \end{align}
+    Thus, we could assume our polynomial is of the form:
+    \begin{align}
+        X^3 + pX + q, \ p,q \in \Q.
+    \end{align}
+    $L(\omega)$ is radical extension, since
+    \begin{align}
+        \Q \left(\sqrt{-3}, \sqrt{\frac{ q^2 }{ 4 }+\frac{ p^3 }{ 27 }}, \sqrt[3]{\frac{ -q }{ 2 } + \sqrt{\frac{ q^2 }{ 4 }+\frac{ p^3 }{ 27 }} } \right) = L(\omega). \ (*)
+    \end{align}
+    LHS of $(*)$ is a radical sequence, since 
+    \begin{align}
+        & ( \sqrt{-3})^2 \in \Q \\
+        & \left( \sqrt{\frac{ q^2 }{ 4 }+\frac{ p^3 }{ 27 }} \right)^2 \in \Q(\sqrt{-3}) \\
+        & u^3 := \left( \sqrt[3]{\frac{ -q }{ 2 } + \sqrt{\frac{ q^2 }{ 4 }+\frac{ p^3 }{ 27 }} } \right)^3 \in \Q \left(\sqrt{-3}, \sqrt{\frac{ q^2 }{ 4 }+\frac{ p^3 }{ 27 }} \right) \\
+        & v := \frac{ -p }{ 3u } = \sqrt[3]{\frac{ -q }{ 2 } - \sqrt{\frac{ q^2 }{ 4 }+\frac{ p^3 }{ 27 }} }\\
+        & \omega := - \frac{ 1 }{ 2 } + \frac{ \sqrt{-3} }{ 2 }
+    \end{align}
+    
+    
+    
+    
 
     
 
@@ -81,6 +104,10 @@ Exercise 9.4.3\\
     \textbf{Exercise 9.4.3} Let $L$ be a subfield of $\C$ such that $\Gamma(L)$ is the dihedral group $D_4$ (having 8 elements), 
     and $L$ a Galois extension of $\Q$. Show that $L$ is a radical extension of $\Q$.\\
     \begin{proof}
+    Let us denote the dihedral group $D_4$ this way:
+    \begin{align}
+        D_4 = \langle f,t \vert \ f^4 = 1 = t^2, f t = t f^3 \rangle
+    \end{align}
     We know degree 2 extension is obtained by adjoining an square root from previous homework.
     Since $\Gamma(L:\Q)$ is $\cong D_4$, and is Galois, we can use Galois Correspondence. Normal subgroup corresponds 
     to normal (Galois) extension.
