completed GAL HW09.tex

--- a/Galois_spr22/HW09.tex
+++ b/Galois_spr22/HW09.tex
@@ -188,15 +188,9 @@ expand, we have
     & + q[ 2X^3 + 3X(\alpha_1^2 + \alpha_2^2) + 3aX^2 - (\alpha_1^3 + \alpha_2^3)]
 \end{align}
 Now, use the expression for $\alpha_1 + \alpha_2$, $\alpha_1^2 + \alpha_2^2$, and $\alpha_1^3 + \alpha_2^3$ that we obtained earlier, we see that we obtain 
-a degree 6 polynomial with coefficients in $\Q (a,b,p,q)$.
+a degree 6 polynomial with coefficients in $\Q (a,b,p,q)$. And we are done.
     
     
-
-\end{homeworkProblem}
-
-\pagebreak
-
-\begin{homeworkProblem}
 
 \end{homeworkProblem}
 
