--- a/Galois_spr22/preambleBloat.tex
+++ b/Galois_spr22/preambleBloat.tex
@@ -187,6 +187,9 @@
 \newcommand{\bigc}[1]{\left\{ #1 \right\}} % {x}
 \newcommand{\biga}[1]{\left\langle #1 \right\rangle} % <x>
 
-%norm
+% norm
+
+% not divide 
+\newcommand{\ndiv}{\hspace{-4pt}\not| \hspace{2pt}}
 
 % \begin{document}
